flux-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: volt-rest-api
  name: volt-rest-api
  namespace: volt
spec:
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: volt-rest-api
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: volt-web
  name: volt-web
  namespace: volt
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: volt-web
  type: ClusterIP
